--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unpkg.com/@bpmn-io/form-js@1.7.3/dist/assets/form-js.css">
+    <style>
+        #form {
+            max-width: 800px;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div id="form"></div>
+
+    <script src="https://unpkg.com/@bpmn-io/form-js@1.7.3/dist/form-viewer.umd.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
